--- a/src/app/components/pcusheet/diagnosis/diagnosis.html
+++ b/src/app/components/pcusheet/diagnosis/diagnosis.html
@@ -43,7 +43,7 @@
                         </div>
 
                         <div class="timeline-footer">
-                            <a class="btn btn-primary btn-md "><i class="fa fa-stethoscope">
+                            <a class="btn btn-primary btn-md " ng-click="showDoctor(diagnosis.doctor._id)" data-toggle="modal" data-target="#doctordetail"><i class="fa fa-stethoscope">
                             </i> by {{diagnosis.doctor.firstname }} {{diagnosis.doctor.lastname }}</a>
                         </div>
                     </div>
@@ -110,4 +110,55 @@
         </div>
     </div>
 </div>
+
+    <div id="doctordetail" class="modal fade" role="dialog">
+        <div class="modal-dialog ">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Doctor Details</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <label class="form-control" id="name">{{ selecteddoctordata.firstname }} {{ selecteddoctordata.lastname }}</label>
+                        </div>
+                        <div class="form-group">
+                            <label for="speciality">Speciality</label>
+                            <label class="form-control" id="speciality">{{ selecteddoctordata.speciality }}</label>
+                        </div>
+                        <div class="form-group">
+                            <label for="nic">NIC</label>
+                            <label class="form-control" id="nic">{{ selecteddoctordata.nic }}</label>
+                        </div>
+                        <div class="form-group">
+                            <div class="box">
+                                <div class="box-header"><h4>Contact</h4></div>
+                                <div class="box-body">
+                                    <div class="form-group">
+                                        <label for="mobile">Mobile</label>
+                                        <label class="form-control" id="mobile">{{ selecteddoctordata.contact_mobile }}</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="resident">Resident</label>
+                                        <label class="form-control" id="resident">{{ selecteddoctordata.contact_res }}</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="address">Address</label>
+                                        <label class="form-control" id="address">{{ selecteddoctordata.address }}</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button data-dismiss="modal" class="btn btn-warning pull-right">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
