--- a/src/app/components/pcusheet/diagnosis/diagnosis.html
+++ b/src/app/components/pcusheet/diagnosis/diagnosis.html
@@ -136,7 +136,7 @@
                         </div>
                         <div class="form-group">
                             <div class="box">
-                                <div class="box-header"><h4>Contact</h4></div>
+                                <div class="box-header"><h>Contact</h></div>
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label for="mobile">Mobile</label>
