--- a/src/app/components/pcusheet/prescription/prescription.html
+++ b/src/app/components/pcusheet/prescription/prescription.html
@@ -13,7 +13,7 @@
 <section class="content">
     <div class="box box-success">
         <div class="box-body">
-            <button class="btn btn-block btn-success btn-md" data-toggle="modal" data-target="#addModal">Add New Diagnosis Detail</button>
+            <button class="btn btn-block btn-success btn-md" data-toggle="modal" data-target="#addPrescriptionModal">Add New Prescription</button>
         </div>
     </div>
     <div class="box box-primary">
@@ -46,7 +46,7 @@
                         </div>
 
                         <div class="timeline-footer">
-                            <a class="btn btn-primary btn-md "><i class="fa fa-stethoscope">
+                            <a class="btn btn-primary btn-md " ng-click="showDoctor(prescription.doctor._id)" data-toggle="modal" data-target="#pdoctordetail"><i class="fa fa-stethoscope">
                             </i> by {{prescription.doctor.firstname }} {{prescription.doctor.lastname }}</a>
                         </div>
                     </div>
@@ -62,4 +62,105 @@
         </li>
     </ul>
 </section>
+
+    <div id="addPrescriptionModal" class="modal fade" role="dialog">
+        <div class="modal-dialog ">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add New Diagnosis</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="doctor">Name of the Doctor</label>
+                            <!--<input type="text" class="form-control" id="doctorname" placeholder="Enter name"-->
+                            <!--ng-model="formData.doctor">-->
+                            <select id="doctor" class="form-control" ng-model="formData.doctor">
+                                <option value="" selected>Select a doctor</option>
+                                <option ng-repeat="doctor in doctordata" value="{{doctor._id}}" >{{ doctor.firstname }} {{ doctor.lastname }} -- Speciality : {{ doctor.speciality}}</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="title">Title</label>
+                            <input type="text" class="form-control" id="title" placeholder="Enter title"
+                                   ng-model="formData.title">
+                        </div>
+                        <div class="form-group">
+                            <label for="details">Details</label>
+                            <input type="text" class="form-control" id="details" placeholder="Enter details"
+                                   ng-model="formData.content">
+                        </div>
+                        <div class="form-group">
+                            <label for="checkupTime">Checkup time</label>
+                            <input type="text" class="form-control" id="checkupTime" placeholder="Enter Checkup Time"
+                                   ng-model="formData.time">
+                        </div>
+                        <div class="form-group">
+                            <label for="checkupDate">Checkup Date</label>
+                            <input type="text" class="form-control" id="checkupDate" placeholder="Enter Checkup Date"
+                                   ng-model="formData.date">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button ng-click="addPrescription()" class="btn btn-success pull-right" data-dismiss="modal">Add Prescription</button>
+                    <button data-dismiss="modal" class="btn btn-warning pull-left">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="pdoctordetail" class="modal fade" role="dialog">
+        <div class="modal-dialog ">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Doctor Details</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <label class="form-control" id="name">{{ selecteddoctordata.firstname }} {{ selecteddoctordata.lastname }}</label>
+                        </div>
+                        <div class="form-group">
+                            <label for="speciality">Speciality</label>
+                            <label class="form-control" id="speciality">{{ selecteddoctordata.speciality }}</label>
+                        </div>
+                        <div class="form-group">
+                            <label for="nic">NIC</label>
+                            <label class="form-control" id="nic">{{ selecteddoctordata.nic }}</label>
+                        </div>
+                        <div class="form-group">
+                            <div class="box">
+                                <div class="box-header"><h4>Contact</h4></div>
+                                <div class="box-body">
+                                    <div class="form-group">
+                                        <label for="mobile">Mobile</label>
+                                        <label class="form-control" id="mobile">{{ selecteddoctordata.contact_mobile }}</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="resident">Resident</label>
+                                        <label class="form-control" id="resident">{{ selecteddoctordata.contact_res }}</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="address">Address</label>
+                                        <label class="form-control" id="address">{{ selecteddoctordata.address }}</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button data-dismiss="modal" class="btn btn-warning pull-right">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
