--- a/src/app/index.html
+++ b/src/app/index.html
@@ -96,8 +96,7 @@
                                 <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                                 <p>
-                                    {{Username }} - Web Developer
-                                    <small>Member since Nov. 2012</small>
+                                    {{Username }} - ADMIN
                                 </p>
                             </li>
 
@@ -159,7 +158,7 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
                 <li class="header">NAVIGATION PANEL</li>
-                <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard </a></li>
+                <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Home </a></li>
                 <li ng-if="Loged"><a href="/registration">
                     <i class="fa fa-user-plus"></i>
                     <span>Registration</span>
