--- a/src/app/components/pcusheet/pcusheet.html
+++ b/src/app/components/pcusheet/pcusheet.html
@@ -12,42 +12,67 @@
     <div class="box box-primary">
         <form class="search-form">
             <div class="form-group">
-                <input type="text" name="search" class="form-control" ng-model="patientsearch" placeholder="Enter Patient ID">
+                <input type="text" name="search" class="form-control" ng-model="patientsearch"
+                       placeholder="Search Patient">
                 <select class="form-control" ng-model="selected_patient" ng-change="gotopatient()">
                     <option selected value="">Choose Patient</option>
-                    <option ng-repeat="patient in patientdata| filter:patientsearch" value="{{ patient._id }}">{{ patient.nic }}&emsp;&emsp; {{ patient.firstname}} {{patient.sirname }}&emsp;&emsp; {{patient.dateofbirth }}&emsp;&emsp; {{patient.bloodgroup}}</option>
+                    <option ng-repeat="patient in patientdata| filter:patientsearch" value="{{ patient._id }}">{{
+                        patient.nic }}&emsp;&emsp; {{ patient.firstname}} {{patient.sirname }}&emsp;&emsp;
+                        {{patient.dateofbirth }}&emsp;&emsp; {{patient.bloodgroup}}
+                    </option>
                 </select>
                 <!--<div class="input-group-btn">-->
-                    <!--<button type="gotopatient" name="gotopatient" class="btn btn-success btn-flat" ng-click="gotopatient()"><i class="fa fa-arrow-right"></i>-->
-                    <!--</button>-->
+                <!--<button type="gotopatient" name="gotopatient" class="btn btn-success btn-flat" ng-click="gotopatient()"><i class="fa fa-arrow-right"></i>-->
+                <!--</button>-->
                 <!--</div>-->
             </div>
         </form>
     </div>
-    <div class="box box-primary text-center" ng-show="selected_patient">
-        <label class="inline"><h4> <b>PCU Sheet Of Patient : </b> {{ selected_patient_data.firstname }} {{selected_patient_data.sirname}}</h4></label>
-        <button ng-click="selected_patient = null" class="pull-right btn btn-danger inline"><i class="glyphicon glyphicon-remove"></i></button>
-    </div>
-    <div class="transparenta" ng-show="selected_patient">
-        <ul >
-            <!--<li class="inline"><button ng-click="changeview(7)" class="btn btn-primary">Patient Details </button></li>-->
-            <li class="inline"><button ng-click="changeview(1)" class="btn btn-primary">Personal </button></li>
-            <li class="inline"><button ng-click="changeview(2)" class="btn btn-primary">Admission Details</button></li>
-            <li class="inline"><button ng-click="changeview(3)" class="btn btn-primary">Current Status</button></li>
-            <li class="inline"><button ng-click="changeview(4)" class="btn btn-primary">Diagnosis Details</button></li>
-            <li class="inline"><button ng-click="changeview(5)" class="btn btn-primary">Prescriptions</button></li>
-            <li class="inline"><button ng-click="changeview(6)" class="btn btn-primary">Lab Tests & Lab Results</button></li>
-        </ul>
-        <div class="transparenta">
-            <div ng-show="view == 1" id="personal" ng-include="'components/pcusheet/status/status.html'"></div>
-            <div ng-show="view == 2" id="admission" ng-include="'components/pcusheet/addmission/admission.html'"></div>
-            <div ng-show="view == 3" id="status" ng-include="'components/pcusheet/status/status.html'"></div>
-            <div ng-show="view == 4" id="diagnosis" ng-include="'components/pcusheet/diagnosis/diagnosis.html'"></div>
-            <div ng-show="view == 5" id="prescription" ng-include="'components/pcusheet/prescription/prescription.html'"></div>
-            <div ng-show="view == 6" id="labtest" ng-include="'components/pcusheet/labtest/labtest.html'"></div>
-            <!--<div ng-show="view == 7" id="patient" ng-include="'components/pcusheet/Patient/Patient.html'"></div>-->
+    <div class="box box-primary transparenta" ng-show="selected_patient">
+        <div class="box-header text-center">
+            <button ng-click="selected_patient = null" class="pull-right btn btn-danger inline pull-right"><i
+                    class="glyphicon glyphicon-remove"></i></button>
+            <label class="inline"><h4><b>PCU Sheet Of Patient : </b> {{ selected_patient_data.firstname }}
+                {{selected_patient_data.sirname}}</h4></label>
 
         </div>
-        <!-- /.tab-content -->
-    </div>
+        <div class="box-body">
+            <div class="transparenta" ng-show="selected_patient">
+                <ul>
+                    <!--<li class="inline"><button ng-click="changeview(7)" class="btn btn-primary">Patient Details </button></li>-->
+                    <li class="inline">
+                        <button ng-click="changeview(1)" class="btn btn-primary">Personal</button>
+                    </li>
+                    <li class="inline">
+                        <button ng-click="changeview(2)" class="btn btn-primary">Admission Details</button>
+                    </li>
+                    <li class="inline">
+                        <button ng-click="changeview(3)" class="btn btn-primary">Current Status</button>
+                    </li>
+                    <li class="inline">
+                        <button ng-click="changeview(4)" class="btn btn-primary">Diagnosis Details</button>
+                    </li>
+                    <li class="inline">
+                        <button ng-click="changeview(5)" class="btn btn-primary">Prescriptions</button>
+                    </li>
+                    <li class="inline">
+                        <button ng-click="changeview(6)" class="btn btn-primary">Lab Tests & Lab Results</button>
+                    </li>
+                </ul>
+                <div class="transparenta">
+                    <div ng-show="view == 1" id="personal" ng-include="'components/pcusheet/status/status.html'"></div>
+                    <div ng-show="view == 2" id="admission"
+                         ng-include="'components/pcusheet/addmission/admission.html'"></div>
+                    <div ng-show="view == 3" id="status" ng-include="'components/pcusheet/status/status.html'"></div>
+                    <div ng-show="view == 4" id="diagnosis"
+                         ng-include="'components/pcusheet/diagnosis/diagnosis.html'"></div>
+                    <div ng-show="view == 5" id="prescription"
+                         ng-include="'components/pcusheet/prescription/prescription.html'"></div>
+                    <div ng-show="view == 6" id="labtest" ng-include="'components/pcusheet/labtest/labtest.html'"></div>
+                    <!--<div ng-show="view == 7" id="patient" ng-include="'components/pcusheet/Patient/Patient.html'"></div>-->
+
+                </div>
+                <!-- /.tab-content -->
+            </div>
+        </div>
 </section>
