--- a/src/app/components/pcusheet/labtest/labtest.html
+++ b/src/app/components/pcusheet/labtest/labtest.html
@@ -1,60 +1,149 @@
-<section class="content-header">
-    <h1 class="pageHeader">
-        Lab Test and Results
-    </h1>
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#"> PCU Sheet</a></li>
-        <li class="active">Lab Test and Results</li>
-    </ol>
-</section>
+<div ng-controller="labtestController">
+    <section class="content-header">
+        <h1 class="pageHeader">
+            Lab Test and Results
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a href="#"> PCU Sheet</a></li>
+            <li class="active">Lab Test and Results</li>
+        </ol>
+    </section>
 
-<section class="content">
-    <div class="box box-success">
-        <div class="box-body">
-            <a href="/pcusheet/addlabtest" class="btn btn-block btn-success btn-md">Add Lab Test / Result</a>
+    <section class="content">
+        <div class="box box-success">
+            <div class="box-body">
+                <!--<a href="/pcusheet/addlabtest" class="btn btn-block btn-success btn-md">Add Lab Test / Result</a>-->
+                <button class="btn btn-block btn-success btn-md" data-toggle="modal" data-target="#labtestModal" ng-click="resetLabResultForm()">Add Labtest Detail
+                </button>
+            </div>
         </div>
-    </div>
+        <div class="box box-primary">
+            <div class="box-body">
+                <input type="text" ng-model="searchkey" placeholder="Search" class="form-control"/>
+            </div>
+        </div>
+        <ul class="timeline">
+            <li ng-repeat="labtest in labtestsdata | orderBy:'-date' | filter:searchkey">
+                <ul class="timeline">
+                    <!--timeline time label-->
 
-    <ul class="timeline">
-        <li ng-repeat="dat in prescriptiondata | orderBy:'-date'">
-            <ul class="timeline">
-                <!--timeline time label-->
-                <li class="time-label">
-                    <span class="bg-red">
-                        {{ dat.date}}
-                    </span>
-                </li>
-                <!-- /.timeline-label -->
+                    <li class="time-label" ng-show="showDate(labtest.date)"><span class="bg-red">{{ formatDate(labtest.date) }}</span></li>
+                    <!-- /.timeline-label -->
 
-                <!-- timeline item -->
-                <li ng-repeat="prescription in dat.prescriptions | orderBy:'-time'">
-                    <!-- timeline icon -->
-                    <i class="fa fa-list-alt bg-blue"></i>
-                    <div class="timeline-item">
-                        <span class="time"><i class="fa fa-clock-o"></i> {{prescription.time}}</span>
+                    <!-- timeline item -->
+                    <li>
+                        <!-- timeline icon -->
+                        <i class="fa fa-list-alt bg-blue"></i>
+                        <div class="timeline-item">
+                            <!--<span class="time"><i class="fa fa-clock-o"></i> {{diagnosis.time}}</span>-->
 
-                        <h3 class="timeline-header"><a href="#">{{prescription.title}}</a></h3>
+                            <h2 class="timeline-header"><a href="#">{{labtest.medicalcase}}</a></h2>
 
-                        <div class="timeline-body">
-                            {{ prescription.content }}
+                            <div class="timeline-body">
+                                <h3>{{ labtest.labtestname }}</h3><br/>
+                                <div ng-if="labtest.labresultstatus=='pending'"><h3>Result Pending</h3></div><br/>
+                                <div ng-if="labtest.labresultstatus!='pending'"><h3>{{ labtest.labresult }}</h3></div><br/>
+                                <h3>{{ labtest.testinterpretation}}</h3>
+                            </div>
+
+                            <div class="timeline-footer">
+                                <a class="btn btn-primary btn-md " ng-click="showDoctor(labtest.doctor._id)" data-toggle="modal" data-target="#doctorlabdetail"><i class="fa fa-stethoscope">
+                                </i> by {{labtest.doctor.firstname }} {{labtest.doctor.lastname }}</a>
+                            </div>
                         </div>
+                    </li>
+                </ul>
+            </li>
 
-                        <div class="timeline-footer">
-                            <a class="btn btn-primary btn-md "><i class="fa fa-stethoscope">
-                            </i> by {{prescription.doctor }}</a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </li>
-
-        <!-- END timeline item -->
-        <li class="time-label">
+            <!-- END timeline item -->
+            <li class="time-label">
             <span class="bg-green">
                 &nbsp;Registered&nbsp;
             </span>
-        </li>
+            </li>
 
-    </ul>
-</section>
+        </ul>
+    </section>
+
+    <div id="labtestModal" class="modal fade" role="dialog">
+        <div class="modal-dialog ">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <ul>
+                        <li class="inline">
+                            <button ng-click="changeview(1)" class="btn btn-primary">Add New Lab Test</button>
+                        </li>
+                        &emsp;&emsp;
+                        <li class="inline">
+                            <button ng-click="changeview(2)" class="btn btn-primary">Add Lab Result</button>
+                        </li>
+                    </ul>
+                </div>
+                <div class="modal-body">
+                    <div ng-show="view == 1" id="add_new" ng-include="'./../components/pcusheet/labtest/labtestAddnew.html'"></div>
+                    <div ng-show="view == 2" id="add_result" ng-include="'./../components/pcusheet/labtest/labtestAddresult.html'"></div>
+                </div>
+                <div class="modal-footer">
+                    <button ng-show="view == 1" ng-click="addEntry(labtests)" class="btn btn-success pull-right" data-dismiss="modal">Add Lab Test</button>
+                    <button ng-show="view == 2" ng-click="addResult(labresult)" class="btn btn-success pull-right" data-dismiss="modal">Add Lab Test Result</button>
+                    <button data-dismiss="modal" class="btn btn-warning pull-left">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="doctorlabdetail" class="modal fade" role="dialog">
+        <div class="modal-dialog ">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Doctor Details</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <label class="form-control" id="name">{{ selecteddoctordata.firstname }} {{ selecteddoctordata.lastname }}</label>
+                        </div>
+                        <div class="form-group">
+                            <label for="speciality">Speciality</label>
+                            <label class="form-control" id="speciality">{{ selecteddoctordata.speciality }}</label>
+                        </div>
+                        <div class="form-group">
+                            <label for="nic">NIC</label>
+                            <label class="form-control" id="nic">{{ selecteddoctordata.nic }}</label>
+                        </div>
+                        <div class="form-group">
+                            <div class="box">
+                                <div class="box-header"><h4>Contact</h4></div>
+                                <div class="box-body">
+                                    <div class="form-group">
+                                        <label for="mobile">Mobile</label>
+                                        <label class="form-control" id="mobile">{{ selecteddoctordata.contact_mobile }}</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="resident">Resident</label>
+                                        <label class="form-control" id="resident">{{ selecteddoctordata.contact_res }}</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="address">Address</label>
+                                        <label class="form-control" id="address">{{ selecteddoctordata.address }}</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button data-dismiss="modal" class="btn btn-warning pull-right">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
