--- a/src/app/components/pcusheet/labtest/labtestAddresult.html
+++ b/src/app/components/pcusheet/labtest/labtestAddresult.html
@@ -1,52 +1,53 @@
-<div ng-controller="labtestController">
-<section class="content-header">
-    <h1 class="pageHeader">
-        Add Lab Result
-    </h1>
- </section>
+
+<!--<section class="content-header">-->
+    <!--<h1 class="pageHeader">-->
+        <!--Add Lab Result-->
+    <!--</h1>-->
+ <!--</section>-->
 
 <section class="content">
     <div class="box box-primary">
         <form role="form">
+            <div class="box-header">
+                <h1 class="pageHeader">
+                    Add Lab Result
+                </h1>
+            </div>
             <div class="box-body">
                 <div class="form-group">
-                    <label>Pending Result List</label>
-                    <select class="form-control">
-                        <option>option 1</option>
-                        <option>option 2</option>
-                        <option>option 3</option>
-                        <option>option 4</option>
-                        <option>option 5</option>
+                    <label for="txt_labtestname">Lab Test Name </label>
+                    <select id="txt_labtestname" class="form-control" ng-model="selectedlabtestid" ng-click="getselectedlabtestdata(selectedlabtestid)">
+                        <option value="" selected>Select Test</option>
+                        <option ng-repeat="test in labtestinfo" value="{{test._id}}" >{{ test.labtestname }}</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Lab Test No:</label>
-                    <input type="text" id="txt_distestid" class="form-control"  disabled="">
-                </div>
-                <div class="form-group">
                     <label for="txt_labdoctor">Name of the Doctor</label>
-                    <input type="text" class="form-control" id="txt_labdoctor" disabled="">
+                    <input type="text" class="form-control" id="txt_labdoctor" disabled="" ng-value="selectedlabtestdata.doctor.firstname + ' ' + selectedlabtestdata.doctor.lastname">
+                </div>
+                <!--<div class="form-group">-->
+                    <!--<label for="txt_labresult">Lab Test Result </label>-->
+                    <!--<textarea class="form-control" id="txt_labresult" rows="5" placeholder="Enter Result"></textarea>-->
+                <!--</div>-->
+                <div class="form-group">
+                    <label for="txt_labresult">Medical Case </label>
+                    <input type="text" id="txt_medicalcase" class="form-control" name="txt_labresult" ng-value="selectedlabtestdata.medicalcase"/>
                 </div>
                 <div class="form-group">
-                    <label>Lab Test Name</label>
-                    <input type="text" id="txt_distestname" class="form-control"  disabled="">
-                </div>
-                <div class="form-group">
-                    <label for="txt_labresult">Lab Test Result </label>
-                    <textarea class="form-control" id="txt_labresult" rows="5" placeholder="Enter Result"></textarea>
+                    <label for="txt_labresult">Lab Result </label>
+                    <input type="text" id="txt_labresult" class="form-control" name="txt_labresult" ng-model="labresult.labresult"/>
                 </div>
                 <div class="form-group">
                     <label for="txt_interpret">Test Interpretation </label>
-                    <input type="text" class="form-control" id="txt_interpret" placeholder="Enter Interpretation">
+                    <input type="text" class="form-control" id="txt_interpret" placeholder="Enter Interpretation" ng-model="labresult.testinterpretation">
                 </div>
 
             </div>
 
-            <div class="box-footer">
-                <a href="/afproject/pcusheet#prescription" ><button type="submit" class="btn btn-danger">Cancel</button></a>
-                <button type="submit" class="btn btn-success pull-right">Add Entry</button>
-            </div>
+            <!--<div class="box-footer">-->
+                <!--<a href="/afproject/pcusheet#prescription" ><button type="submit" class="btn btn-danger">Cancel</button></a>-->
+                <!--<button type="submit" class="btn btn-success pull-right">Add Entry</button>-->
+            <!--</div>-->
         </form>
     </div>
 </section>
-</div>
