--- a/src/app/components/pcusheet/prescription/prescription.html
+++ b/src/app/components/pcusheet/prescription/prescription.html
@@ -1,67 +1,82 @@
 <div ng-controller="PrescriptionController">
     <section class="content-header">
-    <h1 class="pageHeader">
-        Prescribed Drugs
-    </h1>
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#"> PCU Sheet</a></li>
-        <li class="active">Prescription Drugs</li>
-    </ol>
-</section>
+        <h1 class="pageHeader">
+            Prescribed Drugs
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a href="#"> PCU Sheet</a></li>
+            <li class="active">Prescription Drugs</li>
+        </ol>
+    </section>
 
-<section class="content">
-    <div class="box box-success">
-        <div class="box-body">
-            <button class="btn btn-block btn-success btn-md" data-toggle="modal" data-target="#addPrescriptionModal">Add New Prescription</button>
+    <section class="content">
+        <div class="box box-success">
+            <div class="box-body">
+                <button class="btn btn-block btn-success btn-md" data-toggle="modal"
+                        data-target="#addPrescriptionModal" ng-click="resetFromData()">Add New Prescription
+                </button>
+            </div>
         </div>
-    </div>
-    <div class="box box-primary">
-        <div class="box-body">
-            <input type="text" ng-model="searchkey" placeholder="Search" class="form-control"/>
+        <div class="box box-primary">
+            <div class="box-body">
+                <div class="input-group">
+                    <span class="glyphicon glyphicon-search input-group-addon"></span>
+                    <input type="text" ng-model="searchkey" placeholder="Search" class="form-control"/>
+                </div>
+            </div>
         </div>
-    </div>
-    <ul class="timeline">
+        <ul class="timeline">
 
-        <li ng-repeat="prescription in prescriptiondata | orderBy:'-date' | filter:searchkey">
-            <ul class="timeline">
-                <!--timeline time label-->
+            <li ng-repeat="prescription in prescriptiondata | orderBy:'-date' | filter:searchkey">
+                <ul class="timeline">
+                    <!--timeline time label-->
 
-                <li class="time-label" ng-show="showDate(prescription.date)"><span class="bg-red">{{ formatDate(prescription.date) }}</span></li>
-                <!-- /.timeline-label -->
+                    <li class="time-label" ng-show="showDate(prescription.date)"><span class="bg-red">{{ formatDate(prescription.date) }}</span>
+                    </li>
+                    <!-- /.timeline-label -->
 
-                <!-- timeline item -->
-                <li>
-                    <!-- timeline icon -->
-                    <i class="fa fa-list-alt bg-blue"></i>
-                    <div class="timeline-item">
-                        <span class="time"><i class="fa fa-clock-o"></i> {{prescription.time}}</span>
+                    <!-- timeline item -->
+                    <li>
+                        <!-- timeline icon -->
+                        <i class="fa fa-list-alt bg-blue"></i>
+                        <div class="timeline-item">
+                            <span class="time"><i class="fa fa-clock-o"></i> {{prescription.time}}</span>
 
-                        <h3 class="timeline-header"><a href="#">{{prescription.title}}</a></h3>
+                            <h3 class="timeline-header"><a href="#"></a></h3>
 
-                        <div class="timeline-body">
-                            <ul>
-                                <li  ng-repeat="drug in prescription.drugs">{{ drug }}</li>
-                            </ul>
+                            <div class="timeline-body">
+                                <ul>
+                                    <li ng-repeat="drug in prescription.drugs">
+                                        <p>{{ drug.drug.name }} -- {{ drug.drug.quantitypertablet }}</p>
+                                        <p>&emsp;&emsp;Get {{ drug.dose }} tablet{{ drug.dose > 1 ? 's' : ''}} {{ drug.meal }} meal </p>
+                                        <p>&emsp;&emsp;In
+                                        <p ng-show="drug.when[0] == 'true'">&emsp;&emsp;&emsp;&emsp;Morning</p>
+                                        <p ng-show="drug.when[1] == 'true'">&emsp;&emsp;&emsp;&emsp;Noon</p>
+                                        <p ng-show="drug.when[2] == 'true'">&emsp;&emsp;&emsp;&emsp;Night</p>
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="timeline-footer">
+                                <a class="btn btn-primary btn-md " ng-click="showDoctor(prescription.doctor._id)"
+                                   data-toggle="modal" data-target="#pdoctordetail"><i class="fa fa-stethoscope">
+                                </i> by {{prescription.doctor.firstname }} {{prescription.doctor.lastname }}</a>
+                            </div>
                         </div>
+                    </li>
+                </ul>
+            </li>
 
-                        <div class="timeline-footer">
-                            <a class="btn btn-primary btn-md " ng-click="showDoctor(prescription.doctor._id)" data-toggle="modal" data-target="#pdoctordetail"><i class="fa fa-stethoscope">
-                            </i> by {{prescription.doctor.firstname }} {{prescription.doctor.lastname }}</a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </li>
-
-        <!-- END timeline item -->
-        <li class="time-label">
+            <!-- END timeline item -->
+            <li class="time-label">
             <span class="bg-green">
                 &nbsp;Registered&nbsp;
             </span>
-        </li>
-    </ul>
-</section>
+            </li>
+        </ul>
+    </section>
 
     <div id="addPrescriptionModal" class="modal fade" role="dialog">
         <div class="modal-dialog ">
@@ -70,43 +85,97 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Add New Diagnosis</h4>
+                    <h4 class="modal-title">Add New Prescription</h4>
                 </div>
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
                             <label for="doctor">Name of the Doctor</label>
-                            <!--<input type="text" class="form-control" id="doctorname" placeholder="Enter name"-->
-                            <!--ng-model="formData.doctor">-->
                             <select id="doctor" class="form-control" ng-model="formData.doctor">
                                 <option value="" selected>Select a doctor</option>
-                                <option ng-repeat="doctor in doctordata" value="{{doctor._id}}" >{{ doctor.firstname }} {{ doctor.lastname }} -- Speciality : {{ doctor.speciality}}</option>
+                                <option ng-repeat="doctor in doctordata" value="{{doctor._id}}">{{ doctor.firstname }}
+                                    {{ doctor.lastname }} -- Speciality : {{ doctor.speciality}}
+                                </option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="title">Title</label>
-                            <input type="text" class="form-control" id="title" placeholder="Enter title"
-                                   ng-model="formData.title">
-                        </div>
-                        <div class="form-group">
-                            <label for="details">Details</label>
-                            <input type="text" class="form-control" id="details" placeholder="Enter details"
-                                   ng-model="formData.content">
-                        </div>
-                        <div class="form-group">
-                            <label for="checkupTime">Checkup time</label>
-                            <input type="text" class="form-control" id="checkupTime" placeholder="Enter Checkup Time"
+                            <label for="issuedTime">Issued time</label>
+                            <input type="text" class="form-control" id="issuedTime" placeholder="Enter Issued Time"
                                    ng-model="formData.time">
                         </div>
                         <div class="form-group">
-                            <label for="checkupDate">Checkup Date</label>
-                            <input type="text" class="form-control" id="checkupDate" placeholder="Enter Checkup Date"
+                            <label for="issuedDate">Issued Date</label>
+                            <input type="text" class="form-control" id="issuedDate" placeholder="Enter Issued Date"
                                    ng-model="formData.date">
+                        </div>
+                        <div class="form-group">
+                            <label>Add Drugs</label>
+                            <button class="btn btn-primary pull-right" ng-click="adddrugdetail()"><span
+                                    class="glyphicon glyphicon-plus"></span> Add More Drugs
+                            </button>
+                            <div ng-repeat="drugdetail in drugdetails">
+                                <hr/>
+                                <label>Drug {{ $index + 1}}</label>
+                                <select id="drug.{{$index}}" class="form-control"
+                                        ng-model="formData.drugs[$index].drug">
+                                    <option value="" selected>Select a drug</option>
+                                    <option ng-repeat="drug in drugdata" value="{{drug._id}}">{{ drug.name }} -- {{
+                                        drug.quantitypertablet }} -- {{ drug.manufacture }}
+                                    </option>
+                                </select>
+                                <div class="form-group">
+                                    <label for="dose.{{$index}}">Dose</label>
+                                    <input type="number" class="form-control" id="dose.{{$index}}"
+                                           placeholder="Enter Dose"
+                                           ng-model="formData.drugs[$index].dose" min="0" step="0.25">
+                                </div>
+                                <div class="form-group">
+                                    <div class="radio inline">
+                                        <label><input type="radio" name="meal.{{$index}}"
+                                                      ng-model="formData.drugs[$index].meal" value="before">Before Meal</label>
+                                    </div>
+                                    <div class="radio inline">
+                                        <label><input type="radio" name="meal.{{$index}}"
+                                                      ng-model="formData.drugs[$index].meal" value="after">After
+                                            Meal</label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="checkbox inline">
+                                        <label><input type="checkbox" name="when.{{$index}}"
+                                                      ng-click="addremovewhen($index,0)"
+                                                      value="morning">Morning</label>
+                                    </div>
+                                    <div class="checkbox inline">
+                                        <label><input type="checkbox" name="when.{{$index}}"
+                                                      ng-click="addremovewhen($index,1)" value="noon">Noon</label>
+                                    </div>
+                                    <div class="checkbox inline">
+                                        <label><input type="checkbox" name="when.{{$index}}"
+                                                      ng-click="addremovewhen($index,2)" value="night">Night</label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="days.{{$index}}">How Many Days</label>
+                                    <input type="number" class="form-control" id="days.{{$index}}"
+                                           placeholder="Day Count"
+                                           ng-model="formData.drugs[$index].days" min="0">
+                                </div>
+                                <div class="form-group">
+                                    <label for="qty.{{$index}}">Quantity</label>
+                                    <input type="number" class="form-control" id="qty.{{$index}}"
+                                           placeholder="Day Count"
+                                           ng-model="formData.drugs[$index].quantity" min="0" readonly
+                                           ng-value="formData.drugs[$index].dose * formData.drugs[$index].days * whencount[$index]">
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button ng-click="addPrescription()" class="btn btn-success pull-right" data-dismiss="modal">Add Prescription</button>
+                    <button ng-click="addPrescription()" class="btn btn-success pull-right" data-dismiss="modal">Add
+                        Prescription
+                    </button>
                     <button data-dismiss="modal" class="btn btn-warning pull-left">Close</button>
                 </div>
             </div>
@@ -126,7 +195,8 @@
                     <form>
                         <div class="form-group">
                             <label for="name">Name</label>
-                            <label class="form-control" id="name">{{ selecteddoctordata.firstname }} {{ selecteddoctordata.lastname }}</label>
+                            <label class="form-control" id="name">{{ selecteddoctordata.firstname }} {{
+                                selecteddoctordata.lastname }}</label>
                         </div>
                         <div class="form-group">
                             <label for="speciality">Speciality</label>
@@ -142,15 +212,18 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label for="mobile">Mobile</label>
-                                        <label class="form-control" id="mobile">{{ selecteddoctordata.contact_mobile }}</label>
+                                        <label class="form-control" id="mobile">{{ selecteddoctordata.contact_mobile
+                                            }}</label>
                                     </div>
                                     <div class="form-group">
                                         <label for="resident">Resident</label>
-                                        <label class="form-control" id="resident">{{ selecteddoctordata.contact_res }}</label>
+                                        <label class="form-control" id="resident">{{ selecteddoctordata.contact_res
+                                            }}</label>
                                     </div>
                                     <div class="form-group">
                                         <label for="address">Address</label>
-                                        <label class="form-control" id="address">{{ selecteddoctordata.address }}</label>
+                                        <label class="form-control" id="address">{{ selecteddoctordata.address
+                                            }}</label>
                                     </div>
                                 </div>
                             </div>
