--- a/src/app/index.html
+++ b/src/app/index.html
@@ -47,6 +47,7 @@
     <script src="services/prescription.service.js"></script>
     <script src="services/labtest.services.js"></script>
     <script src="services/doctor.service.js"></script>
+    <script src="services/drug.service.js"></script>
 
     <!--controllers-->
     <script src="components/pcusheet/pcu.controller.js"></script>
