--- a/src/app/components/pcusheet/labtest/labtestAddresult.html
+++ b/src/app/components/pcusheet/labtest/labtestAddresult.html
@@ -31,7 +31,7 @@
                 <!--</div>-->
                 <div class="form-group">
                     <label for="txt_labresult">Medical Case </label>
-                    <input type="text" id="txt_medicalcase" class="form-control" name="txt_labresult" ng-value="selectedlabtestdata.medicalcase"/>
+                    <input type="text" id="txt_medicalcase" class="form-control" name="txt_labresult" ng-value="selectedlabtestdata.medicalcase" ng-disabled=""/>
                 </div>
                 <div class="form-group">
                     <label for="txt_labresult">Lab Result </label>
