--- a/src/app/index.html
+++ b/src/app/index.html
@@ -58,6 +58,7 @@
     <script src="components/pcusheet/diagnosis/diagnosis.controller.js"></script>
     <script src="components/pcusheet/prescription/prescriprion.controller.js"></script>
     <script src="components/pcusheet/labtest/labtest.controller.js"></script>
+    <script src="components/pcusheet/status/status.controller.js"></script>
 
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
